Fixed spacing on home page for mobile.

--- a/client/styles/jumbotron.styl
+++ b/client/styles/jumbotron.styl
@@ -17,6 +17,9 @@
 
 	text-align center
 
+	@media (max-width: $bootstrap-screen-sm-min)
+		padding-top 100px
+
 	h3
 		margin-bottom 30px
 	input
@@ -24,10 +27,9 @@
 		color black
 
 	.collapse--search > .panel, .collapse--info > .panel
-		display inline-block
 		margin-left -60px
 		margin-right -60px
-		margin-bottom -10px
+		margin-bottom -1px
 		box-shadow inset 0 9px 8px -5px rgba(0,0,0,0.1);
 		border-radius 0
 		.clear
@@ -35,6 +37,9 @@
 			z-index 1
 			left 30px
 			top 25px
+		@media (max-width: $bootstrap-screen-sm-min)
+			margin-left -15px
+			margin-right -15px
 
 	.collapse--search
 		position relative
@@ -47,6 +52,8 @@
 			z-index 1
 			right 30px
 			top 25px
+			@media (max-width: $bootstrap-screen-sm-min)
+				top 60px
 
 		> .panel
 			background-color $color-lighter-inv
@@ -56,11 +63,14 @@
 				margin-bottom 10px
 				padding-left 30px
 				padding-right 30px
+				@media (max-width: $bootstrap-screen-sm-min)
+					&.paging-padder
+						margin-top 100px
 
 		.searchbox
 			position absolute
 			top 20px
-			left 0
+			left 60px
 			right 0
 
 	.collapse--info
@@ -86,3 +96,6 @@
 			p.center-block
 				margin-left 100px
 				margin-right 100px
+				@media (max-width: $bootstrap-screen-sm-min)
+					margin-left 0
+					margin-right 0
